# JPEGXR

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile
common/include/: guiddef.h  wmsal.h  wmspecstring.h  wmspecstrings_adt.h  wmspecstrings_strict.h  wmspecstrings_undef.h
docs/source/: class-graph.mmd  conf.py  flow-chart-write_pixels.mmd  get_start.rst  index.rst  source_tree.rst
figure/: camera.jxr
image/decode/: JXRTranscode.c  decode.c  decode.h  postprocess.c  segdec.c  strInvTransform.c  strPredQuantDec.c  strdec.c  strdec_x86.c
image/encode/: encode.c  encode.h  segenc.c  strFwdTransform.c  strPredQuantEnc.c  strenc.c  strenc_x86.c
image/sys/: adapthuff.c  ansi.h  common.h  image.c  perfTimer.h  perfTimerANSI.c  strPredQuant.c  strTransform.c  strTransform.h  strcodec.c  strcodec.h  windowsmediaphoto.h  xplatform_image.h
image/x86/: x86.h
jxrencoderdecoder/: JXRDec420.c  JxrDecApp.c  JxrEnc420.c  JxrEncApp.c
jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGlueJxr.z~  JXRGluePFC.c  JXRMeta.c  JXRMeta.h
jxrtestlib/: JXRTest.c  JXRTest.h  JXRTestBmp.c  JXRTestHdr.c  JXRTestPnm.c  JXRTestTif.c  JXRTestYUV.c
python/: compare_psnr.py  memory-layout.ipynb  rate-distortion.ipynb  resove_encoding.ipynb
python/utils/: __init__.py  compute_psnr.py
